# PRIR_23

zadanie1/: CMakeLists.txt  LifeParallelImplementation.cpp  LifeParallelImplementation.h  LifeParallelImplementation_vector.cpp  LifeParallelImplementation_vector.h  LifeSequentialImplementation.cpp  LifeSequentialImplementation.h  Main.cpp  README.md  Rules.cpp  kompilacja.txt
zadanie2/: README.md
zadanie2/src/: Direction.java  Employer.java  Location.java  LocationType.java  Main.java  OrderInterface.java  ParallelEmployer.java  Result.java  ResultListener.java
zadanie3/: README.md
zadanie3/src/: RMIHistogram.java  RemoteHistogram.java
zadanie3/zadanie3/src/: Binder.java
zadanie4/: CMakeLists.txt  README.md  Simulation.cpp  compileAndRun.sh  main.cpp
